tests/baselines/reference/invalidConstraint1.errors.txt
invalidConstraint1.ts(4,11): error TS2344: Type '{ a: number; }' does not satisfy the constraint '{ a: string; }'.
  Types of property 'a' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== invalidConstraint1.ts (1 errors) ====
    function f<T, U extends { a: T }>() {
        return undefined;
    }
    f<string, { a: number }>(); // should error
              ~~~~~~~~~~~~~
!!! error TS2344: Type '{ a: number; }' does not satisfy the constraint '{ a: string; }'.
!!! error TS2344:   Types of property 'a' are incompatible.
!!! error TS2344:     Type 'number' is not assignable to type 'string'.
    
    